data/derived/comb/progs/unify/prog5176.ml.out
Characters 88-89:
  let f a x = h ^ sep ^ t in
                        ^
Error: This expression has type string list
       but an expression was expected of type string
